Rodapé com carousel de logos

--- a/app.css
+++ b/app.css
@@ -12,10 +12,6 @@
   --gray-50: #f5f7fa;
 }
 
-body {
-  font-family: "Inter Tight", Arial, Helvetica, sans-serif;
-}
-
 .text-gray-900 {
   color: #1f2933 !important;
 }
@@ -185,6 +181,21 @@ body {
   box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
 }
 
+body {
+  font-family: "Inter Tight", Arial, Helvetica, sans-serif;
+}
+
+.owl-carousel .owl-item {
+  background: var(--gray-400);
+}
+.owl-carousel .owl-item img {
+  height: 5rem;
+  object-fit: cover;
+  mix-blend-mode: multiply;
+  width: auto !important;
+  filter: grayscale(100%);
+}
+
 .list-services {
   list-style: none;
   padding: 0;
@@ -218,10 +229,6 @@ body {
   bottom: 0;
   left: 0;
   width: calc(75% - 5rem);
-}
-
-.page-header {
-  padding: 1.5rem 0;
 }
 
 /*# sourceMappingURL=app.css.map */
