--- a/app.scss
+++ b/app.scss
@@ -50,10 +50,6 @@ $shadows: (
   "2xl": 0 25px 50px -12px rgb(0 0 0 / 0.25),
 );
 
-body {
-  font-family: "Inter Tight", Arial, Helvetica, sans-serif;
-}
-
 @each $weight, $color in $colors {
   .text-gray-#{$weight} {
     color: $color !important;
@@ -71,6 +67,22 @@ body {
 @each $size, $shadow in $shadows {
   .box-shadow-#{$size} {
     box-shadow: $shadow;
+  }
+}
+
+body {
+  font-family: "Inter Tight", Arial, Helvetica, sans-serif;
+}
+.owl-carousel {
+  .owl-item {
+    background: var(--gray-400);
+    img {
+      height: 5rem;
+      object-fit: cover;
+      mix-blend-mode: multiply;
+      width: auto !important;
+      filter: grayscale(100%);
+    }
   }
 }
 
@@ -104,7 +116,4 @@ body {
   bottom: 0;
   left: 0;
   width: calc(75% - 5rem);
-}
-.page-header {
-  padding: 1.5rem 0;
 }
