--- a/app.scss
+++ b/app.scss
@@ -1,5 +1,5 @@
+@use "buttons";
 @import url("https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700;900&display=swap");
-
 :root {
   --gray-900: #1f2933;
   --gray-800: #323f4b;
