--- a/buttons.scss
+++ b/buttons.scss
@@ -22,6 +22,11 @@
     z-index: 1;
   }
 }
+.button.small {
+  padding: 0 2rem;
+  font-size: 0.85rem;
+  height: 2.5rem;
+}
 .button:before,
 .button:after {
   content: "";
