Substituindo logos no rodapé das páginas

--- a/app.css
+++ b/app.css
@@ -269,8 +269,10 @@ body {
   background: var(--gray-400);
 }
 .owl-carousel .owl-item img {
+  max-width: 100%;
   height: 5rem;
-  object-fit: cover;
+  object-fit: contain;
+  margin: 0 auto;
   mix-blend-mode: multiply;
   width: auto !important;
   filter: grayscale(100%);
