--- a/app.scss
+++ b/app.scss
@@ -78,8 +78,10 @@ body {
   .owl-item {
     background: var(--gray-400);
     img {
+      max-width: 100%;
       height: 5rem;
-      object-fit: cover;
+      object-fit: contain;
+      margin: 0 auto;
       mix-blend-mode: multiply;
       width: auto !important;
       filter: grayscale(100%);
