--- a/app.scss
+++ b/app.scss
@@ -147,7 +147,7 @@ body {
   }
 }
 .hero-section {
-  background: url("plugins/backgrund.png");
+  background: url("images/background.png");
   background-size: cover;
   background-position: center;
 }
