--- a/scss/home/app.scss
+++ b/scss/home/app.scss
@@ -4,7 +4,6 @@
 @import "button.scss";
 @import "cards.scss";
 @import "header.scss";
-@import "footer.scss";
 @import "loader.scss";
 @import "overlay.scss";
 
@@ -35,7 +34,7 @@ html {
 body {
   color: #fff;
   font-family: "Kanit", Arial, Helvetica, sans-serif;
-  background-image: url("images/bg1.jpg");
+  background-image: url("/images/home/background.jpg");
   background-size: cover;
   background-position: top left;
   background-repeat: no-repeat;
@@ -70,4 +69,20 @@ main {
   transform: translate(-50%, -50%);
   z-index: 2;
   height: 17.5rem;
+}
+.owl-carousel {
+  padding: 1rem;
+  background: lightgray;
+  .owl-item {
+    background: lightgray;
+    img {
+      max-width: 100%;
+      height: 5rem;
+      object-fit: contain;
+      margin: 0 auto;
+      mix-blend-mode: multiply;
+      width: auto !important;
+      filter: grayscale(100%);
+    }
+  }
 }
