--- a/scss/home/header.scss
+++ b/scss/home/header.scss
@@ -7,8 +7,8 @@ header {
   display: inline-flex;
   align-items: center;
   img {
-    height: 2.5rem;
-    width: auto;
-    margin-right: 1rem;
+    height: auto;
+    width: 2.75vmin;
+    margin-right: 1vmin;
   }
 }
