--- a/scss/home/overlay.scss
+++ b/scss/home/overlay.scss
@@ -4,7 +4,7 @@
   left: 0;
   position: fixed;
   width: 100vw;
-  height: 100vw;
+  height: 100vh;
   opacity: 0;
   transition: opacity 0.25s;
   z-index: -1;
