--- a/css/app.css
+++ b/css/app.css
@@ -262,7 +262,7 @@
 }
 
 html {
-  font-size: 14px;
+  font-size: 15px;
 }
 
 @media (min-width: 1600px) {
@@ -272,6 +272,10 @@ html {
 }
 body {
   font-family: "Inter Tight", Arial, Helvetica, sans-serif;
+}
+
+a {
+  text-decoration: none;
 }
 
 small {
@@ -321,6 +325,8 @@ small {
 .img-thumbnail-top {
   max-width: 100%;
   width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-top: var(--bs-border-width) solid var(--gray-100);
   background-color: var(--bs-body-bg);
   padding-top: 0.35rem;
@@ -334,16 +340,27 @@ small {
     width: auto;
   }
 }
+.nav-centered {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.nav-centered .nav-link {
+  --bs-nav-link-color: var(--gray-200);
+  --bs-nav-link-hover-color: var(--gray-300);
+}
+
+@media (min-width: 576px) {
+  .nav-centered {
+    flex-direction: row;
+  }
+}
 @media (min-width: 1200px) {
   .nav-centered {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
-  .nav-centered .nav-link {
-    --bs-nav-link-color: var(--gray-200);
-    --bs-nav-link-hover-color: var(--gray-300);
   }
 }
 .hero-section {
