--- a/scss/app.scss
+++ b/scss/app.scss
@@ -71,7 +71,7 @@ $shadows: (
   }
 }
 html {
-  font-size: 14px;
+  font-size: 15px;
 }
 @media (min-width: 1600px) {
   html {
@@ -80,6 +80,9 @@ html {
 }
 body {
   font-family: "Inter Tight", Arial, Helvetica, sans-serif;
+}
+a {
+  text-decoration: none;
 }
 small {
   white-space: nowrap;
@@ -102,6 +105,7 @@ small {
     }
   }
 }
+
 .py-5rem {
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -122,6 +126,8 @@ small {
 .img-thumbnail-top {
   max-width: 100%;
   width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-top: var(--bs-border-width) solid var(--gray-100);
   background-color: var(--bs-body-bg);
   padding-top: 0.35rem;
@@ -134,6 +140,20 @@ small {
     width: auto;
   }
 }
+.nav-centered {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  .nav-link {
+    --bs-nav-link-color: var(--gray-200);
+    --bs-nav-link-hover-color: var(--gray-300);
+  }
+}
+@media (min-width: 576px) {
+  .nav-centered {
+    flex-direction: row;
+  }
+}
 
 @media (min-width: 1200px) {
   .nav-centered {
@@ -141,12 +161,9 @@ small {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    .nav-link {
-      --bs-nav-link-color: var(--gray-200);
-      --bs-nav-link-hover-color: var(--gray-300);
-    }
   }
 }
+
 .hero-section {
   background: url("images/background.png");
   background-size: cover;
