--- a/css/home.css
+++ b/css/home.css
@@ -227,9 +227,8 @@ header {
 
 .page-navigation {
   display: flex;
-  align-items: center;
   flex: 1;
-  margin-right: 2rem;
+  align-items: center;
 }
 .page-navigation a:not(:last-child) img {
   margin-right: 1rem;
@@ -240,11 +239,16 @@ header {
 }
 
 @media (min-width: 768px) {
-  .page-navigation .img {
+  .page-navigation {
     display: inline-flex;
+    flex: unset;
+  }
+  .page-navigation a:not(:last-child) img {
+    margin-right: 1vmin;
+  }
+  .page-navigation img {
     width: 2.75vmin;
     height: auto;
-    margin-right: 1vmin;
   }
 }
 .loader {
