--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Sura:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700;900&display=swap");
 .btn {
   border: unset;
   background: transparent;
@@ -87,7 +86,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  font-family: "Kanit", sans-serif;
+  font-family: "Inter Tight", sans-serif;
   color: white;
   margin-top: auto;
   margin-bottom: 2rem;
@@ -374,7 +373,7 @@ html {
 
 body {
   color: #fff;
-  font-family: "Kanit", Arial, Helvetica, sans-serif;
+  font-family: "Inter Tight", Arial, Helvetica, sans-serif;
   background-image: url("/images/home/background.jpg");
   background-size: cover;
   background-position: top left;
