--- a/scss/home/cards.scss
+++ b/scss/home/cards.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  font-family: "Kanit", sans-serif;
+  font-family: "Inter Tight", sans-serif;
   color: white;
   margin-top: auto;
   margin-bottom: 2rem;
