--- a/scss/home/overlay.scss
+++ b/scss/home/overlay.scss
@@ -5,6 +5,7 @@
   position: fixed;
   width: 100vw;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   opacity: 0;
   transition: opacity 0.25s;
   z-index: -1;
