--- a/css/home.css
+++ b/css/home.css
@@ -250,69 +250,6 @@ header {
     height: auto;
   }
 }
-.loader {
-  display: grid;
-  place-items: center;
-  height: 100vh;
-  width: 100%;
-  position: absolute;
-  inset: 0;
-  background: black;
-  z-index: 10;
-}
-.loader.loaded {
-  display: none;
-}
-
-.lds-ripple {
-  display: inline-block;
-  position: relative;
-  width: 80px;
-  height: 80px;
-}
-
-.lds-ripple div {
-  position: absolute;
-  border: 4px solid #fff;
-  opacity: 1;
-  border-radius: 50%;
-  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
-}
-
-.lds-ripple div:nth-child(2) {
-  animation-delay: -0.5s;
-}
-
-@keyframes lds-ripple {
-  0% {
-    top: 36px;
-    left: 36px;
-    width: 0;
-    height: 0;
-    opacity: 0;
-  }
-  4.9% {
-    top: 36px;
-    left: 36px;
-    width: 0;
-    height: 0;
-    opacity: 0;
-  }
-  5% {
-    top: 36px;
-    left: 36px;
-    width: 0;
-    height: 0;
-    opacity: 1;
-  }
-  100% {
-    top: 0px;
-    left: 0px;
-    width: 72px;
-    height: 72px;
-    opacity: 0;
-  }
-}
 .img-overlay {
   --bg: rgba(137, 47, 29, 0.5);
   top: 0;
@@ -320,6 +257,7 @@ header {
   position: fixed;
   width: 100vw;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   opacity: 0;
   transition: opacity 0.25s;
   z-index: -1;
@@ -387,6 +325,7 @@ section {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
   position: relative;
 }
 
