--- a/css/home.css
+++ b/css/home.css
@@ -7,7 +7,7 @@
   position: relative;
   padding: 0 2rem;
   font-size: 1rem;
-  height: 2.75rem;
+  height: 2.5rem;
   display: grid;
   place-items: center;
   color: var(--def);
@@ -26,6 +26,7 @@
 
 @media (min-width: 768px) {
   .btn {
+    height: 2.75rem;
     padding: 0 3rem;
   }
 }
@@ -115,7 +116,7 @@
   position: absolute;
   left: 0;
   bottom: 0;
-  font-size: calc(var(--size) / 8);
+  font-size: calc(0.75rem + 1vw);
   font-weight: 700;
   line-height: 1.2;
   white-space: nowrap;
@@ -233,7 +234,7 @@ header {
   margin-right: 1rem;
 }
 .page-navigation img {
-  height: 2.75rem;
+  height: 2.5rem;
   width: auto;
 }
 
