--- a/css/home.css
+++ b/css/home.css
@@ -116,7 +116,7 @@
   position: absolute;
   left: 0;
   bottom: 0;
-  font-size: calc(0.75rem + 1vw);
+  font-size: 1.25rem;
   font-weight: 700;
   line-height: 1.2;
   white-space: nowrap;
@@ -125,6 +125,12 @@
   text-shadow: 0 0 5px black;
 }
 
+@media (min-width: 768px) {
+  .title,
+.subtitle {
+    font-size: calc(var(--size) / 8);
+  }
+}
 .image-wrapper {
   width: var(--size);
   height: var(--size);
