Ajustando SEO da página

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -165,7 +165,7 @@ small {
 }
 
 .hero-section {
-  background: url("images/background.png");
+  background: url("../images/background.png");
   background-size: cover;
   background-position: center;
 }
