--- a/css/app.css
+++ b/css/app.css
@@ -364,7 +364,7 @@ small {
   }
 }
 .hero-section {
-  background: url("images/background.png");
+  background: url("../images/background.png");
   background-size: cover;
   background-position: center;
 }
