--- a/scss/app.scss
+++ b/scss/app.scss
@@ -169,6 +169,25 @@ small {
   background-size: cover;
   background-position: center;
 }
+.footer-section {
+  .footer-social {
+    display: inline-flex;
+    align-items: center;
+    img {
+      height: 1.75rem;
+      width: auto;
+    }
+  }
+}
+@media (min-width: 768px) {
+  .footer-section {
+    .footer-social {
+      img {
+        height: 2rem;
+      }
+    }
+  }
+}
 .page-logo {
   height: 5.35rem;
   width: auto;
