Adicionando razão social e CNPJ no rodapé

--- a/css/home.css
+++ b/css/home.css
@@ -376,9 +376,12 @@ main {
     width: auto;
   }
 }
+footer {
+  background: lightgray;
+}
+
 .owl-carousel {
   padding: 1rem;
-  background: lightgray;
 }
 .owl-carousel .owl-item {
   background: lightgray;
@@ -391,6 +394,15 @@ main {
   mix-blend-mode: multiply;
   width: auto !important;
   filter: grayscale(100%);
+}
+
+.footer-copyright {
+  font-size: 80%;
+  padding: 0.5rem 1rem;
+  background: #f2f2f2;
+  color: #3f3f3f;
+  text-align: center;
+  margin: 0;
 }
 
 /*# sourceMappingURL=home.css.map */
