--- a/css/home.css
+++ b/css/home.css
@@ -422,7 +422,7 @@ footer {
 
 @media (min-width: 768px) {
   .footer-copyright br {
-    display: inline-block;
+    display: inline-block !important;
   }
   .footer-copyright {
     text-align: left;
