--- a/css/home.css
+++ b/css/home.css
@@ -363,6 +363,7 @@ main {
   width: 100%;
   height: auto;
   margin-top: auto;
+  margin-bottom: 1rem;
 }
 
 @media (min-width: 768px) {
@@ -374,6 +375,7 @@ main {
     z-index: 2;
     height: 17.5rem;
     width: auto;
+    margin-bottom: 0;
   }
 }
 footer {
@@ -431,6 +433,23 @@ footer {
   .footer-copyright div:last-child {
     margin-top: 0;
     text-align: right;
+  }
+}
+.page-content {
+  margin-bottom: 1rem;
+  text-align: justify;
+}
+
+.page-content br {
+  display: none;
+}
+
+@media (min-width: 992px) {
+  .page-content {
+    text-align: left;
+  }
+  .page-content br {
+    display: inline-block;
   }
 }
 
