--- a/scss/home/app.scss
+++ b/scss/home/app.scss
@@ -72,6 +72,7 @@ main {
   width: 100%;
   height: auto;
   margin-top: auto;
+  margin-bottom: 1rem;
 }
 @media (min-width: 768px) {
   .logo {
@@ -82,6 +83,7 @@ main {
     z-index: 2;
     height: 17.5rem;
     width: auto;
+    margin-bottom: 0;
   }
 }
 footer {
@@ -133,5 +135,20 @@ footer {
   .footer-copyright div:last-child {
     margin-top: 0;
     text-align: right;
+  }
+}
+.page-content {
+  margin-bottom: 1rem;
+  text-align: justify;
+}
+.page-content br {
+  display: none;
+}
+@media (min-width: 992px) {
+  .page-content {
+    text-align: left;
+  }
+  .page-content br {
+    display: inline-block;
   }
 }
